--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^9.0.3",
+    "firebase": "^2.3.2",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-react": "^3.0.1",
@@ -16,9 +17,13 @@
     "gulp-server-livereload": "^1.3.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "history": "^1.13.1",
     "node-notifier": "^4.2.1",
     "react": "^0.13.1",
+    "react-router": "^1.0.0",
+    "reactfire": "^0.5.1",
     "reactify": "^1.1.0",
+    "reflux": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
   },
