--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reactify": "^1.1.0",
     "reflux": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.4.0"
+    "watchify": "^2.4.0",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {}
 }
